--- a/css/clean-screen.css
+++ b/css/clean-screen.css
@@ -13,8 +13,9 @@
     display: flex;
     flex-direction: column;
     margin-right: 90%;
-    margin-top: 10%;
+    margin-top: 2%;
+    margin-bottom: 1%;
 }
 .ctrls > label{
-    padding-top: 50px;
+    padding-top: 20px;
 }
