--- a/css/clean-screen.css
+++ b/css/clean-screen.css
@@ -14,8 +14,10 @@
     flex-direction: column;
     margin-right: 90%;
     margin-top: 2%;
-    margin-bottom: 1%;
 }
 .ctrls > label{
     padding-top: 20px;
+    font-family: fantasy;
+    font-size: medium;
 }
+
